# radar-datatree

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  environment.yml  pyproject.toml
.github/workflows/: render-notebooks.yml
docs/: 1.NEXRAD-KLOT-Demo.ipynb  2.QVP-Workflow-Comparison.ipynb  3.QPE-Snow-Storm.ipynb  NEXRAD-KLOT-Demo.ipynb  QVP-Workflow-Comparison.ipynb  conf.py  index.md
examples/: 01_getting_started.ipynb  README.md
notebooks/: 1.NEXRAD-KLOT-Demo.ipynb  2.QVP-Workflow-Comparison.ipynb  3.QPE-Snow-Storm.ipynb  NEXRAD-KLOT-Demo.ipynb  QVP-Workflow-Comparison.ipynb  VCP-plot.ipynb  demo_functions.py
src/radar_datatree/: __init__.py
tests/: __init__.py
