[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radar-datatree"
version = "0.1.0"
description = "Examples and tutorials for accessing ARCO weather radar data using the Radar DataTree framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Alfonso Ladino-Rincón", email = "alfonso8@illinois.edu"}
]
keywords = ["radar", "weather", "zarr", "xarray", "ARCO", "cloud-native", "icechunk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    # Custom xarray branch with async DataTree support
    "xarray @ git+https://github.com/aladinor/xarray.git@async-dtreec",
    "xradar>=0.10.0",
    "zarr>=3.1.2",
    # Icechunk v2 from git (pinned before breaking change)
    "icechunk @ git+https://github.com/earth-mover/icechunk.git@d11af22#subdirectory=icechunk-python",
    "fsspec",
    "s3fs>=2025.5.1",
    "dask",
    "distributed",
    "pandas",
    "numpy<2.3",
    "matplotlib",
    "cmweather",
    "hvplot",
    "datashader",
    "cartopy>=0.25.0",
    "jupyter>=1.1.1",
    "lab>=8.8",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "notebook",
    "ipykernel",
]

[project.urls]
Homepage = "https://github.com/aladinor/radar-datatree"
Documentation = "https://github.com/aladinor/radar-datatree"
Repository = "https://github.com/aladinor/radar-datatree"
Paper = "https://doi.org/10.48550/arXiv.2510.24943"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["notebooks"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]  # Allow imports after other code in notebooks

[dependency-groups]
dev = [
    "black>=25.12.0",
    "myst-nb>=1.3.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-design>=0.6.1",
    "sphinx-copybutton>=0.5.1",
]

[tool.uv]
# Allow mixing packages from PyPI and nightly wheels index
extra-index-url = ["https://pypi.anaconda.org/scientific-python-nightly-wheels/simple"]
index-strategy = "unsafe-best-match"
